# helix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
deploy/helm/helix/: Chart.yaml  values.yaml
docs/: architecture.md  build-plan-v2.md  build-plan.md  connector-architecture.md  frontend-architecture.md  frontend-build-plan.md  helix-research.md  research-frontend-dashboard.md  research.md  review-report.md  ui-ux-research.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/components/approval/: ApprovalBadge.tsx  ApprovalCard.tsx  ApprovalQueue.tsx  ModifyDrawer.tsx
frontend/components/memory/: MemoryCard.tsx  MemorySearch.tsx
frontend/components/shared/: AppShell.tsx  AuditEntry.tsx  AutonomyDial.tsx  ErrorBoundary.tsx  Header.tsx  LoadingSkeleton.tsx  Sidebar.tsx
frontend/components/workflow/: Canvas.tsx  NLCreator.tsx  (+1 more)
frontend/types/: api.ts  auth.ts  ws.ts
scripts/: load_test.py
src/helix/: config.py  main.py  observability.py  utils.py
tests/: conftest.py  test_config.py  test_hardening.py  test_health.py
tests/test_api/: test_auth.py  test_cors.py  test_events.py  test_new_routes.py  test_routes.py  test_usage.py  test_websocket.py  test_workflow_crud.py
tests/test_db/: test_migrations.py
tests/test_integrations/: test_bus.py  test_ingest.py  test_nango.py  test_registry.py  test_skills.py  test_webhooks.py
tests/test_llm/: test_compaction.py  test_gateway.py  test_gateway_io.py
tests/test_memory/: test_dream.py  test_embeddings.py  test_gather.py  test_pii.py  test_store.py  test_store_db.py
tests/test_models/: test_schemas.py
tests/test_orchestration/: test_approval.py  test_executor.py  test_graph.py  test_speculation.py  test_state.py  test_workflow_generator.py
tests/test_workers/: test_celery.py
(+107 files in other folders)
